<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:layout_margin="@dimen/margin"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfName_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_borndate"
        android:layout_margin="@dimen/margin"
        android:layout_below="@id/tfName"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/calendar_white"
        app:endIconContentDescription="@string/end_icon_date"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Telefono"
        android:layout_below="@+id/tilDatePicker"
        android:layout_margin="@dimen/margin"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfTelefonoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_below="@+id/tfTelefono"
        android:layout_margin="@dimen/margin"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfEmail_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfDescripcionContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:layout_below="@+id/tfEmail"
        android:layout_margin="@dimen/margin"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfDescripcionContacto_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_below="@+id/tfDescripcionContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text1"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        />

</RelativeLayout>